fix: minor spacing refactor

--- a/src/components/InstitutionBanner/InstitutionBanner.module.scss
+++ b/src/components/InstitutionBanner/InstitutionBanner.module.scss
@@ -161,6 +161,10 @@
   .noMarginBottom {
     margin-bottom: 0;
   }
+
+  li:last-of-type {
+    margin-top: 40px;
+  }
 }
 
 .item {
@@ -178,5 +182,7 @@
   .textContainer {
     width: 90%;
     margin-left: 0;
+
+    margin-top: 10px;
   }
 }
